# freenove-quadruped-rl

./: .gitignore  README.md  pyproject.toml
deploy/: deploy.py
notebooks/: keyboard_model_runner_colab.ipynb  train.ipynb
src/freenove_velocity/: __init__.py  env_cfgs.py  rl_cfg.py  train_patched.py
src/freenove_velocity/freenove_dog/: freenove_dog_constants.py
src/freenove_velocity/freenove_dog/xmls/: freenove_dog.xml
