[project]
name = "freenove-velocity"
version = "0.1.0"
description = "RL locomotion training for the Freenove Robot Dog using mjlab"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
deploy = [
    "torch>=2.7.0",
    "onnxruntime>=1.19.0",
    "numpy>=1.26.0",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
indent-width = 2
src = ["src/freenove_velocity"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
freenove_velocity = "freenove_velocity"
